presences/users: add the xivo-uuid argument
Presences from remote UUIDs are still not handled
